--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,72 @@
-# Compiled class file
+# Backend - Spring Boot
+backend/HELP.md
+backend/.gradle
+backend/build/
+backend/!gradle/wrapper/gradle-wrapper.jar
+backend/!**/src/main/**/build/
+backend/!**/src/test/**/build/
+backend/logs/
+
+# Frontend - React
+frontend/node_modules
+frontend/.pnp
+frontend/.pnp.js
+frontend/coverage
+frontend/build
+frontend/.DS_Store
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+
+# IDE files
+.idea/
+*.iws
+*.iml
+*.ipr
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.project
+.classpath
+.settings/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Environment variables
+.env
+*.env
+
+# Compiled output
+out/
+dist/
+target/
 *.class
 
-# Log file
+# Logs
 *.log
+log/
+logs/
 
-# BlueJ files
-*.ctxt
+# Dependency lock files
+package-lock.json
+yarn.lock
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~.nib
+*.hprof
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Database
+*.db
+*.sqlite
